Remove uses of deprecated API